<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.akvelon.mobilecenterandroiddemo.StatsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="DAILY STATISTICS"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/statistics_chart"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintLeft_toLeftOf="parent">

    </com.github.mikephil.charting.charts.LineChart>


    <RadioGroup
        android:id="@+id/statistics_radio_buttons"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/stats_radio_steps"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_chart">

        <RadioButton
            android:id="@+id/stats_radio_steps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_stats_selector"
            android:button="@null"
            android:drawableTop="@drawable/stats_steps"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/stats_steps_caption"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/stats_radio_calories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_stats_selector"
            android:button="@null"
            android:drawableTop="@drawable/stats_calories"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/stats_calories_caption"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/stats_radio_distance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_stats_selector"
            android:button="@null"
            android:drawableTop="@drawable/stats_distance"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/stats_distance_caption"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/stats_radio_active_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_stats_selector"
            android:button="@null"
            android:drawableTop="@drawable/stats_active_time"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/stats_active_time_caption"
            android:textAlignment="center" />
    </RadioGroup>

    <Button
        android:id="@+id/stats_crash_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/button_crash"
        android:text="@string/crash_app_btn_caption"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_radio_buttons"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>
